# genai-projects

./: .gitignore  README.md  import_creds.py
adk-agents/: pyproject.toml
adk-agents/03_callbacks/callback_agent_01/: agent.py
adk-agents/05_memory/memory_agent_01/: agent.py
adk-agents/05_memory/memory_agent_02/: agent.py
adk-agents/06_context/context_caching/: agent.py
adk-agents/06_context/context_compaction/: agent.py
adk-agents/06_context/tool_context_agent_01/: __init__.py  agent.py
adk-agents/09_mcp/: mcp_server_01.py
adk-agents/09_mcp/cloudsql_mcp_agent_03/: README.md  agent.py
adk-agents/09_mcp/mcp_agent_01/: agent.py
adk-agents/09_mcp/mcp_client_agent_02/: agent.py
adk-agents/15_deployment/: .dockerignore  Dockerfile  deploy.sh  main.py  requirements.txt
adk-agents/15_deployment/gke_agent_01/: agent.py
adk-agents/18_a2a/.adk/: session.db
adk-agents/18_a2a/root_agent/: .env.example  agent.py
adk-agents/18_a2a/weather_agent/: agent.py
adk-agents/23_skills/skills_agent_01/: agent.py
agui/agent/: main.py  pyproject.toml
agui/agent/my_agent/: .env.example  agent.py
agui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
agui/frontend/src/: App.tsx  index.css
agui/runtime/: .env.example  package-lock.json  package.json
agui/runtime/src/: server.ts
langchain-crash-course-main/: pyproject.toml
langchain-crash-course-main/4_rag/: .env  1a_rag_basics.py  1b_rag_basics.py
langgraph/: 01_simple_agent.py  02_memory.py  03_human_in_the_loop.py
mcp/gnews-mcp-server/: README.md  pyproject.toml
(+4 files in other folders)
