[project]
name = "adk-chat-agent"
version = "0.1.0"
description = "ADK Chat Agent with AG-UI protocol support"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "google-adk>=1.0.0",
  "google-genai>=1.0.0",
  "ag-ui-adk>=0.0.1",
]
